src/css/Table.css
/*tables container*/
.tables {
  /*margin-top: 50px;*/  /* changed from padding-top 50px to margin-top for scrollbar */
  width: 100%;
  height: 10000px;
  /*height: 100%;*/
  position: absolute;
  top: 0;
  left: 0;
  z-index:2;
  /*overflow: scroll;*/
}

.table {
    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
    border-collapse: separate; /* changed from collapse to get border-radius to work */
    margin: 10px;
    border-top: 10px solid #BD9A63; /* need border-top to even out top border */
    border-radius: 15px; /* added border-radius */
    position: relative;
    border-spacing: 0px;
}

.table td, .table th {
    border: 8px solid #BD9A63;
    padding: 0px;
    background-color: #977359;
    width: 100%;
    border-spacing: 1px;

}

.table tr:hover {background-color: #ddd;}

.table th {
    padding-top: 12px;
    padding-bottom: 12px;
    text-align: left;
    background-color: #EFD962;
    color: white;
}

.tableName {
    display: block;
    float:right;
    height:34px; /* changed from 29px to match select box*/
    width: 300px;
    padding:0px;
    font-size:16px;
    border-color: solid black;
}

.form-group {
    margin: auto 0;
    text-align: center;
}

/*add delete and save buttons*/
.toolPanel {
    /*border: 2px solid red;*/
    padding-top: 5px;
}

.addRowWrap {
    border-bottom-left-radius: 20px; /* need this to round the bottom borders */
    border-bottom-right-radius: 20px; /* need this to round the bottom borders */
}

.addRow {
    padding: 8px 90px;
    border-radius: 4px;
    background-color: #9FA767; /*rgba(30,130,76,0.4); */ /* made green color translucent */
    border: none;
    font-weight: bold;
    font-size: 16px;
    color: white;
}

.addRow:hover {
    background-color: white;
    color: rgba(30,130,76,0.4);
}

.typetd {
    /*width:180px;*/
    /*text-align: center;*/
}

.deletetablebutton {
    color: rgb(166, 0, 0);
    border: none;
    background-color: white; /* made color translucent */
    border-radius: 20px;
    width: 20px;
    height: 20px;
    line-height: 20px;
    text-align: center;;
    position: absolute;
    top: -15px;
    right: -15px;
    padding: 0;
    margin: 0;
    font-weight: bold;
    cursor: pointer;
  }

.deletetablebutton:hover {
    color: white;
    background-color: rgb(166, 0, 0);
}

.deleterowbutton {
    width:7%;
    font-size: 18px;
    float:right;
    cursor:pointer;
    margin-top:6px;
    margin-left: 3px;
    color: white;
}

.deleterowbutton:hover { /* change color on hover */
    color: rgb(51, 51, 51);
}

.propertyinput {
    height:34px; /*changed from 29px to match select box*/
    padding:0px;
    font-size:16px;
    text-align: center;
    margin-top:1px;
    border-color: solid black;
    width: 95%;
}

/*property type dropdown*/
.dropdown {
    width:90%;
    line-height: 1;
 }

.Select-control {
    width:90%;
}

.Select-input {
    width:100px;
}

.select-placeholder {
    margin-top:2px;
    font-size:16px
}

/*dragging feature*/
.drag-handle {
    position: relative;
    width:30px;
    height: 29px;
    float:left;
}
.drag {
    display: block;
    margin-top:21px;
    width: 30px;
    height: 29px;
}

.react-draggable {
    width: 372px;
}

/* giraffe icon */
.img {
    width: 30px;
    height: 29px;
    border-radius: 50%;
    pointer-events: none;
    user-select:none;
}

/*toolbar not currently used*/
.button_base {
  border-color: solid #fbe4a1
}
.button_base:hover {
  cursor: pointer;
  border-color: solid #fbe4a1;
}
.b02_slide_in {
  overflow: hidden;
  border: #000000 solid 1px;
}

.b02_slide_in div {
  position: absolute;
  text-align: center;
  width: 20%;
  height: 55px;
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  padding: 10px;
  border-radius:15px;
}

.b02_slide_in div:nth-child(1) {
  margin-top:1px;
  color:#F5ECB1 ;
  background-color: #6F4A38 ;
}

.b02_slide_in div:nth-child(2) {
  margin-top:2px;
  background-color: #F0ECE1     ;
  transition: top 0.1s ease;
  -webkit-transition: top 0.1s ease;
  -moz-transition: top 0.1s ease;
  top: -60px;
  border-radius:15px;

}

.b02_slide_in div:nth-child(3) {
  color: #977359;
  transition: opacity 0.1s ease;
  -webkit-transition: opacity 0.1s ease;
  -moz-transition: opacity 0.1s ease;
  opacity: 0;
}

.b02_slide_in:hover div:nth-child(2) {
  top: 0px;
  transition: top 0.1s ease;
  -webkit-transition: top 0.1s ease;
  -moz-transition: top 0.1s ease;
}

.b02_slide_in:hover div:nth-child(3) {
  opacity: 1;
  transition: opacity 0.1s ease;
  -webkit-transition: opacity 0.1s ease;
  -moz-transition: opacity 0.1s ease;
}

